# AcaBot

./: .dockerignore  .env.example  .gitignore  .impeccable.md  CLAUDE.md  Dockerfile  Dockerfile.lite  RELEASE_CHECKPOINT.md  TODO.md  config.example.yaml  docker-compose.yml  pyproject.toml  ref-frontend-pages-survey.md  webui-pages-draft.md
.harness/: AGENTS.md  CHANGELOG.md  GOLDEN_PRINCIPLES.md  features.json  progress.md  use-claude-code.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
deploy/: .env.example  README.md  compose.dev.yaml  compose.yaml
docs/: 00-ai-entry.md  01-system-map.md  02-runtime-mainline.md  03-data-contracts.md  04-routing-and-profiles.md  05-memory-and-context.md  06-tools-plugins-and-subagents.md  07-gateway-and-channel-layer.md  08-webui-and-control-plane.md  09-config-and-runtime-files.md  10-change-playbooks.md  11-deployment-reference.md  12-computer.md  13-model-registry.md  13-system-prompt-composition.md  14-reference-backend.md  15-known-issues-and-design-gaps.md  16-front-back-agents-and-self-evolution.md  17-0-memory.md  17-1-memory-self.md  17-2-memory-stickynotes-refactor.md  17-2-memory-stickynotes.md  17-3-memory-long-term-memory.md  17-3-memory-retriever-long-term-memory.md  17-3-memory.md  17-project-consensus.md  18-skill.md  18-tool-skill-subagent.md  19-openclaw-webui-pages.md  19-tool.md  20-critical-architecture-issues.md  20-subagent.md  2026-04-04-outbound-file-publish-layer.md  21-run-mechanism.md  22-work-world-computer-and-sandbox.md  26-foreground-worker.md  (+21 more)
(+759 files in other folders)
