[project]
name = "acabot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "litellm>=1.40.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "lancedb>=0.25.0",
    "pyarrow>=18.0.0",
    "croniter>=2.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
acabot = "acabot.main:main"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
